--- a/src/app/top-bar/top-bar.component.html
+++ b/src/app/top-bar/top-bar.component.html
@@ -1,5 +1,11 @@
 <a>
-    <h1>Rewild My Garden</h1>
+    <nav class="navbar">
+      <div class="navbar-title">
+        <a class="navbar-link">
+          <img class="navbar-title-img" src="/assets/Rewild_Title.png" alt="Rewild My Garden" width=1000>
+        </a>
+      </div>
+    </nav>
 </a> 
   
 <a class="button fancy-button"><i class="material-icons">android</i>Look at Plants</a>
