--- a/src/styles.css
+++ b/src/styles.css
@@ -104,8 +104,9 @@
     padding-right: 4px;
   }
   
-  /* Top Bar */
-  
+  /* Top Bar*/
+
+  /*
   app-top-bar {
     width: 100%;
     height: 68px;
@@ -120,7 +121,7 @@
   app-top-bar h1 {
     color: white;
     margin: 0;
-  }
+  } */
   
   /* Checkout Cart, Shipping Prices
   
