--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,8 @@
-    /* Global Styles */
+// @import './custom-theme';
+// @import '../node_modules/@angular/material/theming';
+// @import 'custom-theme.scss';
+   
+   /* Global Styles */
 
 * {
     font-family: 'Roboto', Arial, sans-serif;
