Adding more styling

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,8 +1,7 @@
 <section fxLayout="column" fxFlexAlign="stretch">
     <div fxFlexAlign="center">
-      <p>Welcome to Rewild My Garden</p>
+      <p class='Subheader'>Welcome to Rewild My Garden</p>
     </div>
-    <p class="subheader" fxFlexAlign="center">Find out about:</p>
     <mat-tab-group mat-align-tabs="center">
       <mat-tab label="Things to Grow"> 
         <p class="content">Lots of flowering plants!</p> 
