--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,7 +1,7 @@
-<mat-toolbar>
-    <div fxHide.gt-xs>
-        <button mat-icon-button (click)="onToggleSidenav()">
-            <mat-icon>menu</mat-icon>
+<mat-toolbar color="primary">
+    <div fxHide.gt-xs >
+        <button class="menu-button" color="accent" mat-icon-button (click)="onToggleSidenav()">
+            <mat-icon >menu</mat-icon>
         </button>
     </div>
     <div>
