--- a/src/app/sidenav-list/sidenav-list.component.html
+++ b/src/app/sidenav-list/sidenav-list.component.html
@@ -1,15 +1,15 @@
 <mat-nav-list>
     <a mat-list-item routerLink="/home" (click)="onSidenavClose()">
-        <mat-icon>home</mat-icon> <span class="nav-caption">Home</span>
+        <mat-icon color="primary" >home</mat-icon> <span class="nav-caption">Home</span>
     </a>
     <a mat-list-item routerLink="/owner" (click)="onSidenavClose()">
-        <mat-icon>assignment_ind</mat-icon> <span class="nav-caption">About</span>   
+        <mat-icon color="primary">filter_vintage</mat-icon> <span class="nav-caption">About</span>   
     </a>
     <a mat-list-item routerLink="#" (click)="onSidenavClose()">
-        <mat-icon>account_balance</mat-icon><span class="nav-caption">Account</span>
+        <mat-icon color="primary">perm_identity</mat-icon><span class="nav-caption">Account</span>
     </a>
     <mat-list-item [matMenuTriggerFor]="menu">
-        <mat-icon>unfold_more</mat-icon>
+        <mat-icon color="primary" >unfold_more</mat-icon>
         <a matline>Example</a>
     </mat-list-item>
     <mat-menu #menu="matMenu">
