--- a/src/app/top-bar/top-bar.component.scss
+++ b/src/app/top-bar/top-bar.component.scss
@@ -4,5 +4,6 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
-    padding: 16px;
+    margin-top: 12px;
+    margin-bottom: 4px;
 }
