adding textbox and notes

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,6 +8,7 @@
           Things To Grow
         </ng-template>
         <p class="content">Lots of flowering plants!</p> 
+        <app-text-box class="content"></app-text-box>
       </mat-tab>
       <mat-tab> 
         <ng-template mat-tab-label>
