--- a/src/app/text-box/text-box.component.html
+++ b/src/app/text-box/text-box.component.html
@@ -1,1 +1,4 @@
-<p>text-box works!</p>
+<mat-form-field appearance="outline">
+    <mat-label>User Name</mat-label>
+  <input matInput>
+</mat-form-field>
