Adding sub rather than emit to manage data movement

--- a/src/app/form-page/text-box/text-box.component.html
+++ b/src/app/form-page/text-box/text-box.component.html
@@ -10,6 +10,7 @@
           ngModel
           required
           minlength="3"
+          placeholder="Whatever text you want"
           #ourInput="ngModel"></textarea>
           <!-- #ourInput="ngModel us to pass the input to mat-error to check if it's invalid -->
           <!-- Error message html, for if something is wrong -->
