--- a/src/app/form-page/text-output/text-output.component.html
+++ b/src/app/form-page/text-output/text-output.component.html
@@ -2,4 +2,6 @@
     <h3>
         {{ post.ourInput }}
     </h3>
+    <!-- If this was a mat-accordion/mat-expansion-panel, you could add a mat-action-row 
+    here, which could have logic to edit and delete pre-existing posts -->
 </div>
