--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <app-top-bar></app-top-bar>
 
-<app-text-box (formInputCreated)="onPostAdded($event)"></app-text-box>
-<app-text-output [posts]="storedPosts"></app-text-output>
+<app-text-box></app-text-box>
+<app-text-output></app-text-output>
 
 <app-layout>
   <mat-sidenav-container>
