--- a/src/app/form-page/text-box/text-box.component.html
+++ b/src/app/form-page/text-box/text-box.component.html
@@ -3,14 +3,14 @@
     <mat-form-field 
       appearance="outline" 
       floatLabel="always">
-        <mat-label>Please input some text</mat-label>
+        <mat-label>What are your favourite plants?</mat-label>
         <textarea 
           matInput 
           name="ourInput"
           ngModel
           required
           minlength="3"
-          placeholder="Whatever text you want"
+          placeholder="Please enter your favourite plants."
           #ourInput="ngModel"></textarea>
           <!-- #ourInput="ngModel us to pass the input to mat-error to check if it's invalid -->
           <!-- Error message html, for if something is wrong -->
