--- a/src/app/form-page/text-output/text-output.component.html
+++ b/src/app/form-page/text-output/text-output.component.html
@@ -1,7 +1,7 @@
 <div *ngFor="let post of posts">
-    <h3>
+    <p class="responses">
         {{ post.ourInput }}
-    </h3>
+    <p>
     <!-- If this was a mat-accordion/mat-expansion-panel, you could add a mat-action-row 
     here, which could have logic to edit and delete pre-existing posts -->
 </div>
