--- a/src/app/home-page/home/home.component.html
+++ b/src/app/home-page/home/home.component.html
@@ -11,9 +11,11 @@
       </mat-tab>
       <mat-tab> 
         <ng-template mat-tab-label>
-          Community Projects
+          Post About Plants
         </ng-template>
-        <p class="content">People are doing stuff near you!</p> 
+        <p class="content">We want to hear your thoughts!</p>
+        <app-text-box></app-text-box>
+        <app-text-output></app-text-output> 
       </mat-tab>
     </mat-tab-group>
   </section>
