--- a/src/app/pages/flower-data-test-page/data-display-test/data-display-test.component.html
+++ b/src/app/pages/flower-data-test-page/data-display-test/data-display-test.component.html
@@ -1,5 +1,2 @@
-<p>HI!</p>
-<hr>
-<h1> hello hello </h1>
-
-<p>[flowerName]</p>
+<p>Flower List</p>
+<div style="text-align:center" [innerText]="string"></div>
