--- a/src/app/top-display/top-bar/top-bar.component.html
+++ b/src/app/top-display/top-bar/top-bar.component.html
@@ -1,11 +1,9 @@
 <a>
     <nav class="navbar">
       <div class="navbar-title">
-        <a class="navbar-link">
+        <a routerLink="/home" class="navbar-link">
           <img class="navbar-title-img" src="/assets/Rewild_Title.png" alt="Rewild My Garden" width=1000>
         </a>
       </div>
     </nav>
 </a> 
-  
-<!-- <a class="button fancy-button"><i class="material-icons">android</i>Look at Plants</a> -->
