Preparing to start working with data

--- a/src/app/pages/home-page/home/home.component.html
+++ b/src/app/pages/home-page/home/home.component.html
@@ -1,6 +1,6 @@
 <section fxLayout="column" fxFlexAlign="stretch">
     <div fxFlexAlign="center">
-      <p class='Subheader'>Welcome to Rewild My Garden! hello :) </p>
+      <p class='Subheader'>Welcome to Rewild My Garden! </p>
     </div>
     <mat-tab-group mat-align-tabs="center">
       <mat-tab> 
