--- a/src/app/display/layout/layout.component.html
+++ b/src/app/display/layout/layout.component.html
@@ -1,5 +1,7 @@
-<div fxLayout="row wrap" fxLayoutAlign="center center" class="layout-wrapper">
-    <div fxFlex="100%" fxFlex.lt-md="100%" class="flex-wrapper">
+<!-- WORK OUT WHAT THIS NOW DOES -->
+
+<div fxLayout="row wrap" fxLayoutAlign="center center" class="layout-wrapper" color="accent">
+    <div fxFlex="90%" fxFlex.lt-md="100%" class="flex-wrapper">
         <ng-content></ng-content>
     </div>
 </div>
