--- a/src/app/top-display/navigation/navigation.component.html
+++ b/src/app/top-display/navigation/navigation.component.html
@@ -1,28 +1,38 @@
-<mat-toolbar color="white">
-    <div>
-        <a routerLink="/home"><img 
-            class="toolbar-image"
-            src="/assets/Rewild_Title.png" 
-            alt="Rewild My Garden" 
-            >
-        </a>
-    </div>
-    <div fxFlex fxLayout fxLayoutAlign="end" fxHide.xs>
-        <ul fxLayout fxLayoutGap="15px" class="navigation-items">
-            <li>
-                <a class="navigation-text" routerLink="/account">Account</a>
-            </li>
-            <li>
-                <a class="navigation-text" routerLink="/form-page">Form</a>
-            </li>
-            <li>
-                <a class="navigation-text" routerLink="/data-page">Data</a>
-            </li>
-        </ul>
-    </div>
-    <div fxHide.gt-xs>
-        <button class="menu-button" mat-icon-button (click)="onToggleSidenav()">
-            <mat-icon >menu</mat-icon>
-        </button>
-    </div>
+<mat-toolbar color="accent">
+
+    <mat-toolbar-row class="login-row">
+        <div fxFlex fxLayout fxLayoutAlign="end" fxHide.xs>
+            <a class="login-text" routerLink="/account">Log in</a>
+        </div>
+    </mat-toolbar-row>
+
+    <mat-toolbar-row class="menu-row">
+        <div>
+            <a routerLink="/home"><img 
+                class="toolbar-image"
+                src="/assets/Rewild_Title.png" 
+                alt="Rewild My Garden" 
+                >
+            </a>
+        </div>
+        <div fxFlex fxLayout fxLayoutAlign="end" fxHide.xs>
+            <ul fxLayout fxLayoutGap="18px" class="navigation-items">
+                <li>
+                    <a class="navigation-text" routerLink="/form-page">Rate My Garden</a>
+                </li>
+                <li>
+                    <a class="navigation-text" routerLink="/form-page">Begin Rewilding</a>
+                </li>
+                <li>
+                    <a class="navigation-text" routerLink="/data-page">About</a>
+                </li>
+            </ul>
+        </div>
+        <div fxHide.gt-xs>
+            <button class="menu-button" mat-icon-button (click)="onToggleSidenav()">
+                <mat-icon >menu</mat-icon>
+            </button>
+        </div>
+    </mat-toolbar-row>
+
 </mat-toolbar>
