--- a/src/app/top-display/navigation/navigation.component.scss
+++ b/src/app/top-display/navigation/navigation.component.scss
@@ -6,18 +6,30 @@
 
 .navigation-text{
     color: black;
+    font-size: 17px;
+    // vertical-align: middle; 
+}
+
+.login-text{
+    color: black;
+    text-decoration: underline;     
+    font-size: 17px;
+    padding-top: 10px;
 }
 
 .toolbar-image{
-    padding: 10px;
-    vertical-align: middle; 
+    padding-left: 10px;
+    // vertical-align: middle; 
     width: 600px;
-    max-width: 95%;
+    max-width: 98%;
 }
 
-mat-toolbar{
+.menu-row{
     height: 100px;
-    border-radius: 3px;
+}
+
+.login-row{
+    height: 22px;
 }
 
 @media(max-width: 959px){
