--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -8,8 +8,42 @@
 
 @import "~@angular/material/theming";
 
+$my-brand: (
+  50: #ffffff,
+  100: #ffffff,
+  200: #ffffff,
+  300: #ffffff,
+  400: #ffffff,
+  500: #ffffff,
+  600: #ffffff,
+  700: #ffffff,
+  800: #ffffff,
+  900: #ffffff,
+  A100: #ffffff,
+  A200: #ffffff,
+  A400: #ffffff,
+  A700: #ffffff,
+  contrast: (
+    50: $black-87-opacity,
+    100: $black-87-opacity,
+    200: $black-87-opacity,
+    300: $black-87-opacity,
+    400: $black-87-opacity,
+    500: white,
+    600: white,
+    700: white,
+    800: white,
+    900: white,
+    A100: $black-87-opacity,
+    A200: $black-87-opacity,
+    A400: $black-87-opacity,
+    A700: white,
+  )
+);
+
+
 $my-primary: mat.define-palette(mat.$green-palette, 900);
-$my-accent: mat.define-palette(mat.$green-palette, 600);
+$my-accent: mat.define-palette($my-brand, 50);
 
 $my-tabs-theme: mat.define-light-theme((
  color: (
