setting up data connection + refining pages

--- a/src/app/top-display/navigation/navigation.component.html
+++ b/src/app/top-display/navigation/navigation.component.html
@@ -24,7 +24,7 @@
                     <a class="navigation-text" routerLink="/form-page">Begin Rewilding</a>
                 </li>
                 <li>
-                    <a class="navigation-text" routerLink="/data-page">About</a>
+                    <a class="navigation-text" routerLink="/about-page">About</a>
                 </li>
             </ul>
         </div>
