--- a/src/app/top-display/sidenav-list/sidenav-list.component.html
+++ b/src/app/top-display/sidenav-list/sidenav-list.component.html
@@ -2,7 +2,7 @@
     <a mat-list-item routerLink="/home" (click)="onSidenavClose()">
         <mat-icon color="primary" >home</mat-icon> <span class="nav-caption">Home</span>
     </a>
-    <a mat-list-item routerLink="/data-page" (click)="onSidenavClose()">
+    <a mat-list-item routerLink="/about-page" (click)="onSidenavClose()">
         <mat-icon color="primary">filter_vintage</mat-icon> <span class="nav-caption">About</span>   
     </a>
     <a mat-list-item routerLink="/form-page" (click)="onSidenavClose()">
