--- a/src/app/top-display/sidenav-list/sidenav-list.component.html
+++ b/src/app/top-display/sidenav-list/sidenav-list.component.html
@@ -2,18 +2,19 @@
     <a mat-list-item routerLink="/home" (click)="onSidenavClose()">
         <mat-icon color="primary" >home</mat-icon> <span class="nav-caption">Home</span>
     </a>
-    <a mat-list-item routerLink="/about-page" (click)="onSidenavClose()">
-        <mat-icon color="primary">filter_vintage</mat-icon> <span class="nav-caption">About</span>   
+    <a mat-list-item routerLink="/wildlife-advice-page" (click)="onSidenavClose()">
+        <mat-icon color="primary">filter_vintage</mat-icon> <span class="nav-caption">Make My Garden Wild</span>   
     </a>
     <a mat-list-item routerLink="/form-page" (click)="onSidenavClose()">
         <mat-icon color="primary">filter_vintage</mat-icon> <span class="nav-caption">Rate My Garden</span>   
     </a>
-    <a mat-list-item routerLink="/form-page" (click)="onSidenavClose()">
-        <mat-icon color="primary">filter_vintage</mat-icon> <span class="nav-caption">Begin Rewilding</span>   
+    <a mat-list-item routerLink="/about-page" (click)="onSidenavClose()">
+        <mat-icon color="primary">filter_vintage</mat-icon> <span class="nav-caption">About</span>   
     </a>
     <a mat-list-item routerLink="/account" (click)="onSidenavClose()">
         <mat-icon color="primary">perm_identity</mat-icon><span class="nav-caption">Account</span>
     </a>
+    <!-- This is code to create a sub-menu -->
     <!-- <mat-list-item [matMenuTriggerFor]="menu">
         <mat-icon color="primary" >unfold_more</mat-icon>
         <a matline>Example</a>
