--- a/src/app/display/layout/layout.component.html
+++ b/src/app/display/layout/layout.component.html
@@ -1,4 +1,4 @@
-<!-- WORK OUT WHAT THIS NOW DOES -->
+<!-- This determines the page width when the page is at its widest -->
 
 <div fxLayout="row wrap" fxLayoutAlign="center center" class="layout-wrapper" color="accent">
     <div fxFlex="90%" fxFlex.lt-md="100%" class="flex-wrapper">
