Data pulled from the back to front. New cluster.

--- a/src/app/pages/wildlife-advice-page/wildlife-advice/wildlife-advice.component.html
+++ b/src/app/pages/wildlife-advice-page/wildlife-advice/wildlife-advice.component.html
@@ -1,10 +1,13 @@
 <p>We are nice! We like planting plants like:</p>
-<div style="text-align:center" [innerText]="plantData"></div> 
 
-<!-- This gives a response 'undefined' -->
-<div style="text-align:center" [innerText]="plantData[1].Soil"></div> 
-<div *ngFor="let singlePlantData of plantData">
+<!-- <div *ngFor="let singlePlantData of plantData">
     <p class="responses">
-        {{ singlePlantData.Soil }}
+        {{ singlePlantData }}
     <p>
+</div> -->
+
+<div *ngFor="let data of plantData" style="text-align:center">
+    <p>
+       {{ data.Soil }}
+    </p>
 </div>
