Now able to filter api response by multiple header

--- a/src/app/pages/wildlife-advice-page/wildlife-advice/wildlife-advice.component.html
+++ b/src/app/pages/wildlife-advice-page/wildlife-advice/wildlife-advice.component.html
@@ -1,5 +1,5 @@
 <p class='Subheader'>Plant recommendations:</p>
-<div *ngFor="let data of minimalTestData" class="grid">
+<div *ngFor="let data of noSpaceMinimalTestData" class="grid">
     <div class="grid-item">
         <p>
            {{ data.LatinName }}
