We can now filter flowers based on user inpput

--- a/src/app/pages/form-page/text-box/text-box.component.html
+++ b/src/app/pages/form-page/text-box/text-box.component.html
@@ -16,7 +16,6 @@
           <!-- Error message html, for if something is wrong -->
           <mat-error *ngIf="ourInput.invalid">Please enter a valid post.</mat-error>
     </mat-form-field>
-    <button 
-      type="submit">Save</button>
+    <button type="submit">Save</button>
   </form>
 </mat-card>
