--- a/src/app/pages/wildlife-advice-page/wildlife-layout/wildlife-layout.component.html
+++ b/src/app/pages/wildlife-advice-page/wildlife-layout/wildlife-layout.component.html
@@ -1,3 +1,5 @@
+<p class='Subheader'>Advice to Rewild your Garden</p>
+
 <app-wildlife-multiplechoice></app-wildlife-multiplechoice>
 
 <app-wildlife-advice></app-wildlife-advice>
