--- a/src/app/top-display/navigation/navigation.component.html
+++ b/src/app/top-display/navigation/navigation.component.html
@@ -1,11 +1,12 @@
 <mat-toolbar color="accent">
 
-    <!-- fxHide.xs means 'hide if screen width is xs', i.e. on mobile -->
+    <!-- CURRENT DESIGN HAS NO LOG IN
+    fxHide.xs means 'hide if screen width is xs', i.e. on mobile
     <mat-toolbar-row class="login-row" fxHide.xs>
         <div fxFlex fxLayout fxLayoutAlign="end" fxHide.xs>
             <a class="login-text" routerLink="/account">Log in</a>
         </div>
-    </mat-toolbar-row>
+    </mat-toolbar-row> -->
 
     <mat-toolbar-row class="menu-row">
         <div>
