--- a/src/app/display/layout/layout.component.html
+++ b/src/app/display/layout/layout.component.html
@@ -1,7 +1,9 @@
-<!-- This determines the page width when the page is at its widest -->
+<div class="blockForHeader"></div>
 
-<div fxLayout="row wrap" fxLayoutAlign="center center" class="layout-wrapper" color="accent">
-    <div fxFlex="90%" fxFlex.lt-md="100%" class="flex-wrapper">
+<!-- This determines the page width when the page is at its widest -->
+<div  fxLayoutAlign="center center" class="layout-wrapper">
+    <div fxFlex="80%" fxFlex.lt-md="100%" class="flex-wrapper">
         <ng-content></ng-content>
     </div>
 </div>
+
