--- a/src/app/top-display/navigation/navigation.component.scss
+++ b/src/app/top-display/navigation/navigation.component.scss
@@ -1,12 +1,18 @@
+//This sticks the toolbar to the top of the page. There is a box in the layout 
+//component preventing text from overlapping it
+.mat-toolbar{
+    position: fixed;
+    z-index: 100;
+}
+
 .navigation-items{
     list-style-type: none;
-    padding: 0;
     margin: 0;
 }
 
 .navigation-text{
     color: black;
-    font-size: 17px;
+    font-size: 18px;
 }
 
 // If the screen size is 600px wide or less, make the nav test smaller
@@ -14,25 +20,22 @@
     .navigation-text{
         font-size: 15px;
     }
-}
-
-.login-text{
-    color: black;
-    text-decoration: underline;     
-    font-size: 17px;
-    padding-top: 10px;
+    .toolbar-image{
+        padding-left: 5px;
+    }
 }
 
 // Determines the size of main image top left
 .toolbar-image{
     padding-left: 10px;
-    width: 600px;
-    max-width: 98%;
+    width: 670px;
+    max-width: 100%;
 }
 
 // Determines the height of main navigation row
 .menu-row{
-    height: 100px;
+    padding-top: 26px;
+    height: 120px;
 }
 
 // If the screen size is 350px wide or less, make the top bar less tall
@@ -42,7 +45,3 @@
     }
   }
 
-// Determines the height of 'log in' row
-.login-row{
-    height: 26px;
-}
