--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -44,11 +44,14 @@ $my-brand: (
 
 $my-primary: mat.define-palette(mat.$green-palette, 900);
 $my-accent: mat.define-palette($my-brand, 50);
+$my-background: mat.define-palette($my-brand, 50);
 
 $my-tabs-theme: mat.define-light-theme((
  color: (
    primary: $my-primary,
    accent: $my-accent,
+   background: $my-background,
+   foreground: $my-background,
  )
 ));
 
