--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,7 @@
 @import '~@angular/material/theming';
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+@import '~bootstrap/dist/css/bootstrap.css';
 
 // Within this project:
 // -wide screen is 960px plus (white space either side of central)
@@ -12,7 +13,7 @@
 
    /* Global Styles */
 
-* {
+  * {
     font-family: 'Montserrat', sans-serif;
     color: #000000;
     box-sizing: border-box;
