--- a/src/app/pages/wildlife-advice-page/wildlife-advice/wildlife-advice.component.html
+++ b/src/app/pages/wildlife-advice-page/wildlife-advice/wildlife-advice.component.html
@@ -1,13 +1,10 @@
-<div *ngFor="let data of noSpaceMinimalTestData" class="grid">
-    <mat-card class="grid-item">
-
-        <p class= "plantName">
-           {{ data.LatinName }}
-        </p>
-
-        <div class="imageDiv">
-            <img alt="plantImage" [src]="data.Pathname">
-        </div>
-        
+<mat-grid-list *ngFor="let data of noSpaceMinimalTestData" class="grid">
+    <mat-grid-tile>
+    <mat-card class="card">
+        <img mat-card-image alt="plantImage" [src]="data.Pathname" class="card-img-top">
+        <mat-card-content>
+            <p> {{ data.LatinName }} </p>
+        </mat-card-content>
     </mat-card>
-</div>
+    </mat-grid-tile>
+</mat-grid-list>
