Adding padding and title

--- a/src/app/pages/wildlife-advice-page/wildlife-advice/wildlife-advice.component.html
+++ b/src/app/pages/wildlife-advice-page/wildlife-advice/wildlife-advice.component.html
@@ -1,3 +1,4 @@
+<div class="gridBlock">
 <mat-grid-list *ngFor="let data of noSpaceMinimalTestData" class="grid">
     <mat-grid-tile>
     <mat-card class="card">
@@ -8,3 +9,4 @@
     </mat-card>
     </mat-grid-tile>
 </mat-grid-list>
+</div>
