--- a/src/app/pages/wildlife-advice-page/wildlife-layout/wildlife-layout.component.html
+++ b/src/app/pages/wildlife-advice-page/wildlife-layout/wildlife-layout.component.html
@@ -2,4 +2,6 @@
 
 <app-wildlife-multiplechoice></app-wildlife-multiplechoice>
 
-<app-wildlife-advice></app-wildlife-advice>
+<p id="adviceTitle" class="Subheader"></p>
+
+<app-wildlife-advice class="adviceGrid"></app-wildlife-advice>
