Consistent format- about to delete some pages

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,10 +5,12 @@
     <mat-sidenav-content>
       <app-navigation (sidenavToggle)="sidenav.toggle()"></app-navigation>
       <app-layout>
+        <div class="HeaderBlock">
         <main>
           <!-- The component associated with the current route will be rendered here -->
           <router-outlet></router-outlet>
         </main>
+        </div>
       </app-layout>
     </mat-sidenav-content>
   </mat-sidenav-container>
