--- a/src/app/pages/about-page/about-text/about-text.component.html
+++ b/src/app/pages/about-page/about-text/about-text.component.html
@@ -1,8 +1,8 @@
-<section fxLayout="column" fxFlexAlign="stretch">
+<p class='PageHeader'>About Rewild My Garden! </p>
 
-    <div fxFlexAlign="center">
-      <p class='Subheader'>About Rewild My Garden! </p>
-    </div>
+<div class='PageBody'>
+
+<section fxLayout="column" fxFlexAlign="stretch">
     <div fxFlexAlign="center">
         <p class="text-content">Rewild my Garden is a project to help people understand how their garden can help wildlife</p>
     </div>
@@ -34,3 +34,4 @@
     </mat-tab-group>
 
   </section>
+</div>
