--- a/src/app/pages/form-page/form-input-output/form-input-output.component.html
+++ b/src/app/pages/form-page/form-input-output/form-input-output.component.html
@@ -1,2 +1,6 @@
+<p class='PageHeader'>Rate My Garden</p>
+
+<div class='PageBody'>
 <app-text-box></app-text-box>
 <app-text-output></app-text-output> 
+</div>
