--- a/src/app/pages/home-page/home/home.component.html
+++ b/src/app/pages/home-page/home/home.component.html
@@ -1,6 +1,8 @@
+<p class='PageHeader'>Welcome to Rewild My Garden! </p>
+
+<div class='PageBody'>
 <section fxLayout="column" fxFlexAlign="stretch">
     <div fxFlexAlign="center">
-      <p class='Subheader'>Welcome to Rewild My Garden! </p>
     </div>
     <mat-tab-group mat-align-tabs="center">
       <mat-tab> 
@@ -17,3 +19,4 @@
       </mat-tab>
     </mat-tab-group>
   </section>
+</div>
