--- a/src/app/pages/wildlife-advice-page/wildlife-layout/wildlife-layout.component.scss
+++ b/src/app/pages/wildlife-advice-page/wildlife-layout/wildlife-layout.component.scss
@@ -1,8 +1,5 @@
 .Subheader{
     padding-left: 30px;
+    // vertical-align: centre;
+    // color: white;
 }
-
-// .adviceGrid{
-//     padding-left: 30px;
-//     padding-right: 30px;
-// }
