--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -12,6 +12,11 @@ mat-sidenav-container{
 mat-sidenav {
     width: 250px;
 }
-main {
-    padding: 10px;
+
+.HeaderBlock{
+    width:100%;
+    height: 60px;
+    background: rgb(121, 194, 139);
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
 }
