--- a/src/app/display/layout/layout.component.scss
+++ b/src/app/display/layout/layout.component.scss
@@ -1,5 +1,6 @@
 .blockForHeader{
     height: 120px;
+
 }
 
 // If the screen size is 350px wide or less, make the top bar less tall
@@ -12,9 +13,9 @@
 .flex-wrapper{
     height: 100%;
     //setting colour of central square
-    background-color: rgb(234, 243, 236);
+    background-color: rgb(248, 252, 249);
     //central square is minimum 550px high
-    min-height: 600px;
+    height: 1000px;
     //rounding corners of square
     border-radius: 10px;
 }
