--- a/src/app/pages/wildlife-advice-page/wildlife-multiplechoice/wildlife-multiplechoice.component.scss
+++ b/src/app/pages/wildlife-advice-page/wildlife-multiplechoice/wildlife-multiplechoice.component.scss
@@ -1,14 +1,14 @@
 .radio-question {
     display: flex;
     flex-direction: column;
-    margin: 15px 0;
+    // margin: 15px 0;
   }
   
-.radio-button {
-    margin: 5px;
-}
+// .radio-button {
+//     margin: 5px;
+// }
 
-.MC-question-container {
-    padding-top: 10px;
-    padding-left: 50px;
-}
+// .MC-question-container {
+//     padding-top: 10px;
+//     padding-left: 50px;
+// }
