--- a/src/app/pages/wildlife-advice-page/wildlife-layout/wildlife-layout.component.html
+++ b/src/app/pages/wildlife-advice-page/wildlife-layout/wildlife-layout.component.html
@@ -1,11 +1,11 @@
 <p class="PageHeader">Make My Garden Wild</p>
 <div class="PageBody">
     <!-- Multiple choice is hidden if 'save' is clicked -->
-    <app-wildlife-multiplechoice *ngIf="show"></app-wildlife-multiplechoice>
+    <app-wildlife-multiplechoice *ngIf="multichoiceShow"></app-wildlife-multiplechoice>
 
     <!-- Subheader and advice grid only appear if 'save' is clicked -->
     <p id="adviceTitle" class="Subheader"></p>
     <p id="adviceText"></p>
-    <app-wildlife-advice class="adviceGrid"></app-wildlife-advice>
+    <app-wildlife-advice id="adviceGridID" class="adviceGrid"></app-wildlife-advice>
 
 </div>
